# Uzuy-MMJR

./: .codespellrc  .git-blame-ignore-revs  .gitattributes  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  vcpkg.json
.ci/: uzuy-mainline-step1.yml  uzuy-mainline-step2.yml  uzuy-patreon-step1.yml  uzuy-patreon-step2.yml  uzuy-repo-sync.yml  uzuy-verify.yml
.ci/templates/: build-mock.yml  build-msvc.yml  build-single.yml  build-standard.yml  build-testing.yml  format-check.yml  merge-private.yml  merge.yml  mergebot-private.yml  mergebot.yml  release-download.yml  release-github.yml  release-private-tag.yml  release-universal.yml  retrieve-artifact-source.yml  retrieve-master-source.yml  sync-source.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android-build.yml  android-ea-play-release.yml  android-mainline-play-release.yml  android-merge.js  android-publish.yml  ci.yml  codespell.yml  mirror.yml  verify.yml
.reuse/: dep5
CMakeModules/: CopyUzuyFFmpegDeps.cmake  CopyUzuyQt5Deps.cmake  CopyUzuySDLDeps.cmake  DownloadExternals.cmake  FindLLVM.cmake  FindOpus.cmake  Findgamemode.cmake  Findlz4.cmake  Findzstd.cmake  GenerateSCMRev.cmake  MSVCCache.cmake  MinGWClangCross.cmake  WindowsCopyFiles.cmake
hooks/: pre-commit
src/: CMakeLists.txt
src/android/: .gitignore  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
src/android/app/src/main/jni/: CMakeLists.txt  android_config.cpp  android_config.h  android_settings.cpp  android_settings.h  game_metadata.cpp  native.cpp  native.h  native_config.cpp  native_input.cpp  native_log.cpp
src/android/app/src/main/jni/emu_window/: emu_window.cpp  emu_window.h
src/audio_core/: CMakeLists.txt  audio_core.cpp  audio_core.h  audio_event.cpp  audio_event.h  audio_in_manager.cpp  audio_in_manager.h  audio_manager.cpp  audio_manager.h  audio_out_manager.cpp  audio_out_manager.h  audio_render_manager.cpp  audio_render_manager.h  precompiled_headers.h
src/common/: CMakeLists.txt  algorithm.h  announce_multiplayer_room.h  assert.cpp  assert.h  atomic_ops.h  bit_cast.h  bit_set.h  bit_util.h  bounded_threadsafe_queue.h  common_funcs.h  common_precompiled_headers.h  concepts.h  demangle.cpp  demangle.h  div_ceil.h  elf.h  expected.h  fiber.cpp  fiber.h  free_region_manager.h  heap_tracker.cpp  heap_tracker.h  host_memory.cpp  host_memory.h  intrusive_list.h  intrusive_red_black_tree.h  literals.h  lru_cache.h  lz4_compression.cpp  lz4_compression.h  make_unique_for_overwrite.h  memory_detect.cpp  memory_detect.h  multi_level_page_table.cpp  multi_level_page_table.h  multi_level_page_table.inc  nvidia_flags.cpp  nvidia_flags.h  overflow.h  (+51 more)
src/core/: CMakeLists.txt  constants.cpp  constants.h  core_timing.cpp  core_timing.h  cpu_manager.cpp  cpu_manager.h  device_memory.cpp  device_memory.h  device_memory_manager.h  device_memory_manager.inc  gpu_dirty_memory_manager.h  guest_memory.h  hardware_properties.h  memory.cpp  memory.h  perf_stats.cpp  precompiled_headers.h  reporter.cpp  reporter.h  telemetry_session.cpp  telemetry_session.h
src/dedicated_room/: CMakeLists.txt  uzuy_room.cpp  uzuy_room.rc
src/frontend_common/: CMakeLists.txt  config.cpp  config.h  content_manager.h
src/hid_core/: CMakeLists.txt  hid_core.cpp  hid_core.h  hid_result.h  hid_types.h  hid_util.h  resource_manager.cpp  resource_manager.h
src/input_common/: CMakeLists.txt  input_engine.cpp  input_engine.h  input_mapping.cpp  input_mapping.h  input_poller.cpp  input_poller.h
src/network/: CMakeLists.txt  announce_multiplayer_session.cpp  room.cpp  room.h  verify_user.h
src/shader_recompiler/: CMakeLists.txt  environment.h  exception.h  (+9 more)
src/uzuy_cmd/: CMakeLists.txt  sdl_config.cpp  sdl_config.h  uzuy.cpp  uzuy.rc
src/uzuy_cmd/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h  emu_window_sdl2_gl.cpp  emu_window_sdl2_gl.h  emu_window_sdl2_null.cpp  emu_window_sdl2_null.h  emu_window_sdl2_vk.cpp  emu_window_sdl2_vk.h
tools/: reset-submodules.sh
(+2546 files in other folders)
